--- a/client/src/components/Projects/Project.module.css
+++ b/client/src/components/Projects/Project.module.css
@@ -15,7 +15,7 @@
 .container img {
 	border-radius: 20px 20px 0 0;
 	width: 100%;
-	height: 35%;
+	height: 45%;
 	object-fit: cover;
 	object-position: 74.5% 59%;
 }
@@ -33,8 +33,6 @@
 .detailsContainer p {
 	color: var(--secondary-text);
 	font-size: 0.8rem;
-	/* font-size: clamp(0.75rem, 0.75vmax, 2rem); */
-	margin: 0.1vmin 0 0.5vmin;
 }
 
 .btnContainer {
@@ -43,11 +41,4 @@
 	display: flex;
 	padding: 0 15px 10px;
 	justify-content: center;
-}
-
-@media (max-width: 650px) {
-	.detailsContainer h2,
-	.detailsContainer p {
-		margin-bottom: 10px;
-	}
 }
