--- a/client/src/components/Projects/Skills.module.css
+++ b/client/src/components/Projects/Skills.module.css
@@ -4,8 +4,8 @@
 }
 
 .container svg {
-	width: clamp(1.25rem, 1.75vmax, 1.8rem);
-	height: clamp(1.25rem, 1.75vmax, 1.8rem);
+	width: clamp(1.75rem, 1.75vmax, 1.8rem);
+	height: clamp(1.75rem, 1.75vmax, 1.8rem);
 	padding-right: 8px;
 	fill: var(--skill-icons);
 }
